2011-10-31 Tim Marston <edam@waxworlds.org>

	* version.sh: updated to 2.9

2011-10-30 Tim Marston <edam@waxworlds.org>

	* configur.bat: fixed windows build to use libiconv

2011-10-13 Tim Marston <edam@waxworlds.org>

	* autogen.sh: extra checks for installed software
	* configure.ac: release in tar.xz format (as well as tar.gz)

2011-09-11 Felix Natter <fnatter@gmx.net>

	* tools/typcombine: tell about new courses in "More lessons..."

2011-07-23 Felix Natter <fnatter@gmx.net>

	* tools/ktouchOLD2typ.pl: include the old ktouch 1.6 script as a
	  simple way of creating gtypist lessons. Works with utf-8.

2011-04-08  Tim marston <edam@waxworlds.org>

	* version.sh: updated to 2.8.5

2011-02-24  Tim Marston <edam@waxworlds.org>

	* version.sh: updated to 2.8.4
	* cleaned up various ChangeLogs, removed duplicate entries

2008-05-29  Paul Goins  <general@vultaire.net>

	* version.sh: Updated to 2.8.1, bug fix release.
	* Makefile.am: Added dist_bin_SCRIPTS line for typefortune, since it
	  was being distributed but not properly installed in the 2.8 release.
	  (Bug reported by Christian "naddy" Weisgerber.)  Also removed an
	  extra reference to conf_dos.bat.in.

2008-05-27  Paul Goins  <general@vultaire.net>

	* version.sh: Updated to 2.8.

2008-05-15  Paul Goins  <general@vultaire.net>

	* configure.ac: Renamed from configure.in.  Added nl and zh_CN
	  translations to ALL_LINGUAS.  Made several other minor
	  autoconf-related updates.

2008-05-14  Paul Goins  <general@vultaire.net>

	* version.sh: Updated to 2.8-pre2.
	* INSTALL.in: Added build instructions for Windows NT/2000/XP.
	* conf_dos.bat.in: Created a new file for the old DOS-style batch file.
	* autogen.sh, Makefile.am: Added conf_dos.bat

2008-05-12  Paul Goins  <general@vultaire.net>

	* NEWS: Updated for 2.8.
	* README: Added Windows XP as a tested OS.
	* README.CVS: Updated recommended automake version.
	* THANKS: Updated.

2008-05-06  Paul Goins  <general@vultaire.net>
