@@ -6,7 +6,7 @@ dist_bin_SCRIPTS = typefortune
 man_MANS = typefortune.1
 
 EXTRA_DIST = config.rpath mkinstalldirs src/gtypist.1 typefortune.1	\
-	configur.bat version.sh configur.bat.in autogen.sh INSTALL.in \
+	configure-w32 version.sh configure-w32.in autogen.sh INSTALL.in \
 	TODO QUESTIONS
 
 ACLOCAL_AMFLAGS = -I m4
