@@ -1,31 +1,0 @@
-@echo off
-
-echo Configuring gtypist @VERSION
-echo Using MinGW and PDCurses
-echo No Native Language Support
-echo Creating src\config.h
-echo /* config.h */> src\config.h
-echo #undef ENABLE_NLS>> src\config.h
-echo #define PACKAGE "gtypist">> src\config.h
-echo #define VERSION "2.9beta1">> src\config.h
-echo #define HAVE_PDCURSES>> src\config.h
-echo Creating Makefile
-echo # gtypist: Makefile for MinGW> Makefile
-echo #>> Makefile
-echo # Please read INSTALL for help building gtypist with MinGW.>> Makefile
-echo.>> Makefile
-echo # Define the path to a compiled PDCurses library below.>> Makefile
-echo PDCURSES_PATH=C:\dev\PDCurses-3.4>> Makefile
-echo GNUWIN32_PATH=C:\GnuWin32>>Makefile
-echo.>> Makefile
-echo gtypist.exe:>> Makefile
-echo 	gcc -DMINGW -DPDC_WIDE -I$(PDCURSES_PATH) -I$(GNUWIN32_PATH)/include -Isrc -static -s -O2 -o gtypist src/error.c src/script.c src/cursmenu.c src/gtypist.c src/getopt.c src/getopt1.c src/utf8.c -L$(PDCURSES_PATH)/win32 -L$(GNUWIN32_PATH)/lib -lpdcurses -liconv.dll>> Makefile
-echo.
-echo.
-echo IMPORTANT: Before running make, change the PDCURSES_PATH and GNUWIN32_PATH
-echo variables in the Makefile! Type 'notepad Makefile' to edit it.
-echo.
-goto end
-
-:end
-@echo on
